[package]
name = "brand_new_wtest_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
csv = "1.1.6"
serde = {version ="1.0.144" , features = ["derive"]}
xml-builder = "0.5.0"
